--- a/src/components/scss/Header.module.scss
+++ b/src/components/scss/Header.module.scss
@@ -4,9 +4,9 @@ header{
       max-width: 100%;
     
     }
-    .header-content{
+    .header_content{
     padding:0px 10px;
     }
-    .header-content-logo{
+    .header_content_logo{
       max-height: 30px;
     }
