--- a/src/components/scss/Nav.module.scss
+++ b/src/components/scss/Nav.module.scss
@@ -18,6 +18,6 @@ nav{
     nav a:not(:last-child){
       padding-bottom:10px;
     }
-    .nav-last{
+    .nav_last{
       margin-top: 10px;
     }
