--- a/src/components/scss/Profile.module.scss
+++ b/src/components/scss/Profile.module.scss
@@ -5,18 +5,18 @@ main{
   padding-top: 20px;
   padding-left: 20px;
   }
-  .main-img_top{
+  .main_img_top{
     width: 100%;
   }
-  .main-content-imgName{
+  .main_content_imgName{
     width: 100%;
     display: flex;
     margin-top: 10px;
   }
-  .main-content-imgName img{
+  .main_content_imgName img{
     max-width: 200px;
   }
-  .main-content-imgName p{
+  .main_content_imgName p{
     margin-left: 20px;
     font-size: 22px;
     font-weight: 600;
