--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ box-sizing: border-box;
 margin: 0;
 }
 #root{
-  max-width: 1280px;
   margin-left: auto;
   margin-right:auto;
 }
@@ -13,7 +12,7 @@ margin: 0;
   "header header"
   "nav main";
   grid-template-rows: repeat(2,max-content);
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: max-content 10fr;
 }
 
 
