--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -3,9 +3,8 @@ nav{
     display: flex;
     flex-flow: column;
       background-color: #FFCCBB;
-      padding-left: 10px;
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding:20px 20px;
+width: max-content;
       
     }
     nav a{
