--- a/src/components/Profile/MyPosts/Post/Post.module.scss
+++ b/src/components/Profile/MyPosts/Post/Post.module.scss
@@ -1,8 +1,15 @@
 
 .main_content_posts_all{
     display: flex;
+    height: 50px;
     p{
         margin-left: 15px;
+    }
+    .main_content_posts_message_info{
+        display: flex;
+        height: 100%;
+        justify-content: space-between;
+        flex-flow: column;
     }
     margin-top: 10px;
 }
