Add all pages and browser-route

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,8 @@ header{
     grid-area: header;
     padding:10px 0px;
       max-width: 100%;
-    
+      border-bottom:1px solid #e5e7eb;
+
     }
     .header_content{
     padding:10px 20px;
